--- a/estilo.css
+++ b/estilo.css
@@ -26,9 +26,7 @@ body {
 #area-principal {
     width: 920px;
     margin: 0 auto;
-}
-#area-postagens, #area-lateral {
-    background: orange;
+    padding: 15px;
 }
 #area-postagens {
     width: 660px;
@@ -43,6 +41,16 @@ body {
     margin-bottom: 20px;
     background: white;
 }
+.conteudo-lateral {
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.postagem-lateral {
+    font-size: 0.8em;
+    padding: 5px;
+    border-bottom: 1px dotted #ccc;
+}
 #rodape {
     clear: both;
     text-align: center;
@@ -55,14 +63,21 @@ body {
 a {
     text-decoration: none;
 }
-a:link,a:visited {
-    color: #ffffff;
-    padding: 8px 12px;
+a:link, a:visited {
+    color: #f7b600;
 
 }
 a:hover {
+    text-decoration: underline;
+}
+#area-cabecalho a:link, #area-cabecalho a:visited {
+    color: #ffffff;
+    padding: 8px 12px;
+}
+#area-cabecalho a:hover {
     color: #f7b600;
     background: #ffffff;
+    text-decoration: none
 }
 
 /*formatação geral*/
@@ -71,7 +86,21 @@ h1{
     color: #4e4e4e;
     font-size: 2.5em;
 }
-
+h2 {
+    color: #f7b600;
+}
+h3 {
+    color: #565656;
+    background: #ccc;
+    padding: 5px;
+}
 .branco {
     color: white;
+}
+.data-postagem {
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
 }
